# clef-rush

./: Cargo.toml  README.md  Trunk.toml  index.html  justfile
.github/: FUNDING.yml
.github/workflows/: ci.yaml
dev/: cert.pem  key.pem
resources/: hello_world.xml  index.scss  landmarks.mei  svg_stylesheet.css  template.mei  template2.mei  template_landmarks.mei  verovio_options.json
resources/fonts/stigmature/: README.txt
resources/mei/: bass.mei  combined.mei  treble.mei
resources/styles/: note-correct.css  note-incorrect.css
src/: app.rs  input.rs  keyboard.rs  lib.rs  piano.rs  util.rs  verovio.rs
src/app/: game_active.rs  game_finished.rs  loading.rs  main_menu.rs
src/app/game_active/: sheet.rs
web/: config.mjs  utils.mjs  verovio-worker.mjs  verovio.mjs
