[package]
name = "piano-trainer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
const_format = { version = "0.2", features = ["fmt"] }
tokio = { version = "1.44", default-features = false, features = ["time"] }
iced = { version = "0.13", features = ["webgl", "svg"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing = "0.1"
tracing-wasm = "0.2"
tap = "1.0"
wasm-timer = "0.2"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
midir = "0.10"
web-sys = "0.3"
js-sys = "0.3"
midly = "0.5"
derive_more = { version = "2.0", features = [
    "display",
    "deref",
    "from",
    "into",
] }
