[package]
name = "piano-trainer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "d1e936f", default-features = false, features = [
    "web-colors",
    "auto-detect-theme",
    "wgpu",
    "webgl",
    "fira-sans",
    "svg",
] }
# iced = { path = "/home/ivan/git/iced", default-features = false, features = [
#     "web-colors",
#     "auto-detect-theme",
#     "wgpu",
#     "webgl",
#     "fira-sans",
#     "svg",
# ] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing = "0.1"
tracing-wasm = "0.2"
tap = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
midir = "0.10"
web-sys = "0.3"
js-sys = "0.3"
midly = "0.5"
derive_more = { version = "2.0", features = [
    "display",
    "debug",
    "deref",
    "from",
    "into",
] }
thiserror = "2.0"
futures-util = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9", default-features = false, features = [
    "std",
    "thread_rng",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 'z'

# [replace]
# "cosmic-text:0.14.1" = { path = "/mnt/storage/git/cosmic-text/" }
