[package]
name = "clef-rush"
version = "0.1.0"
edition = "2024"
authors = ["Ivan Reshetnikov"]
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "d1e936f", default-features = false, features = [
    "canvas",
    "web-colors",
    "auto-detect-theme",
    "wgpu",
    "webgl",
    "fira-sans",
    "svg",
] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing = "0.1"
tracing-wasm = "0.2"
tap = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
midir = "0.10"
web-sys = "0.3"
js-sys = "0.3"
midly = "0.5"
derive_more = { version = "2.0", features = [
    "display",
    "debug",
    "deref",
    "from",
    "into",
] }
thiserror = "2.0"
futures-util = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9", default-features = false, features = [
    "std",
    "thread_rng",
] }
smallvec = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 's'

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
absolute_paths = "warn"
bool_to_int_with_if = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
into_iter_without_iter = "warn"
iter_not_returning_iterator = "warn"
iter_with_drain = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_string_new = "warn"
match_bool = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
readonly_write_lock = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
struct_excessive_bools = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unnecessary_box_returns = "warn"
unnecessary_self_imports = "warn"
unused_peekable = "warn"
useless_let_if_seq = "warn"
